Fix label vertical alignment

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1367,3 +1367,8 @@ figcaption {
 video {
   max-width: 100%;
 }
+
+.blg-header .label {
+  display: inline-block;
+  vertical-align: text-top;
+}
